+ Status tip for font color selection button in settings. * Number of cities wasn't saved in wince version.

--- a/ui/settingsdialog.ce.ui
+++ b/ui/settingsdialog.ce.ui
@@ -195,6 +195,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="buttonColor">
+          <property name="statusTip">
+           <string>Задать цвет шрифта, используемого при печати</string>
+          </property>
           <property name="text">
            <string>&amp;Цвет...</string>
           </property>
