--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -236,9 +236,6 @@
      <string>&amp;File</string>
     </property>
     <widget class="QMenu" name="menuFileSave">
-     <property name="statusTip">
-      <string/>
-     </property>
      <property name="title">
       <string>&amp;Save</string>
      </property>
@@ -248,9 +245,9 @@
      </property>
      <addaction name="actionFileSaveTask"/>
      <addaction name="separator"/>
-     <addaction name="actionFileSaveResultAll"/>
-     <addaction name="actionFileSaveResultMatrices"/>
-     <addaction name="actionFileSaveResultGraph"/>
+     <addaction name="actionFileSaveSolutionAll"/>
+     <addaction name="actionFileSaveSolutionMatrices"/>
+     <addaction name="actionFileSaveSolutionGraph"/>
     </widget>
     <addaction name="actionFileNew"/>
     <addaction name="actionFileOpen"/>
@@ -265,7 +262,21 @@
     <property name="title">
      <string>&amp;Settings</string>
     </property>
-    <addaction name="actionSettingsSettings"/>
+    <widget class="QMenu" name="menuSettingsLanguage">
+     <property name="toolTip">
+      <string>Select language</string>
+     </property>
+     <property name="statusTip">
+      <string>Select application language</string>
+     </property>
+     <property name="title">
+      <string extracomment="Please, append &quot; / Language&quot; when translating this string.">&amp;Language</string>
+     </property>
+     <addaction name="actionSettingsLanguageAutodetect"/>
+    </widget>
+    <addaction name="menuSettingsLanguage"/>
+    <addaction name="separator"/>
+    <addaction name="actionSettingsPreferences"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -302,7 +313,7 @@
    <addaction name="actionFileSaveTask"/>
    <addaction name="separator"/>
    <addaction name="actionFilePrint"/>
-   <addaction name="actionSettingsSettings"/>
+   <addaction name="actionSettingsPreferences"/>
    <addaction name="separator"/>
    <addaction name="actionFileExit"/>
   </widget>
@@ -336,7 +347,7 @@
     <string>Ctrl+P</string>
    </property>
   </action>
-  <action name="actionFileSaveResultMatrices">
+  <action name="actionFileSaveSolutionMatrices">
    <property name="enabled">
     <bool>false</bool>
    </property>
@@ -350,7 +361,7 @@
     <string>Save solution steps only</string>
    </property>
   </action>
-  <action name="actionFileSaveResultGraph">
+  <action name="actionFileSaveSolutionGraph">
    <property name="enabled">
     <bool>false</bool>
    </property>
@@ -364,7 +375,7 @@
     <string>Save solution graph only</string>
    </property>
   </action>
-  <action name="actionFileSaveResultAll">
+  <action name="actionFileSaveSolutionAll">
    <property name="enabled">
     <bool>false</bool>
    </property>
@@ -423,7 +434,7 @@
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionSettingsSettings">
+  <action name="actionSettingsPreferences">
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
      <normaloff>:/images/buttons/buttons/Properties.png</normaloff>:/images/buttons/buttons/Properties.png</iconset>
@@ -517,6 +528,23 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionSettingsLanguageAutodetect">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Autodetect</string>
+   </property>
+   <property name="toolTip">
+    <string>Detect language automatically</string>
+   </property>
+   <property name="statusTip">
+    <string>Detect language automatically based on regional settings</string>
    </property>
   </action>
  </widget>
