--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -235,9 +235,9 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
-    <widget class="QMenu" name="menuFileSave">
+    <widget class="QMenu" name="menuFileSaveAs">
      <property name="title">
-      <string>&amp;Save</string>
+      <string>Save &amp;as...</string>
      </property>
      <property name="icon">
       <iconset resource="../resources/tspsg.qrc">
@@ -251,7 +251,8 @@
     </widget>
     <addaction name="actionFileNew"/>
     <addaction name="actionFileOpen"/>
-    <addaction name="menuFileSave"/>
+    <addaction name="actionFileSave"/>
+    <addaction name="menuFileSaveAs"/>
     <addaction name="separator"/>
     <addaction name="actionFilePrintSetup"/>
     <addaction name="actionFilePrint"/>
@@ -417,9 +418,6 @@
    </property>
   </action>
   <action name="actionFileOpen">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
      <normaloff>:/images/buttons/buttons/OpenFolder.png</normaloff>:/images/buttons/buttons/OpenFolder.png</iconset>
@@ -513,9 +511,6 @@
    </property>
   </action>
   <action name="actionFileSaveTask">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="../resources/tspsg.qrc">
      <normaloff>:/images/buttons/buttons/Save.png</normaloff>:/images/buttons/buttons/Save.png</iconset>
@@ -562,6 +557,27 @@
    </property>
    <property name="text">
     <string notr="true">English</string>
+   </property>
+  </action>
+  <action name="actionFileSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../resources/tspsg.qrc">
+     <normaloff>:/images/buttons/buttons/Save.png</normaloff>:/images/buttons/buttons/Save.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Save</string>
+   </property>
+   <property name="iconText">
+    <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Save task</string>
+   </property>
+   <property name="statusTip">
+    <string>Save current task</string>
    </property>
   </action>
  </widget>
